--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Hello World</h1>
+    <h2>Goodbye World</h2>
+    <h3>Add</h3>
     <script></script>
   </body>
 </html>
