--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Hello World</h1>
     <h2>Goodbye World</h2>
     <h3>Add</h3>
-    <script></script>
+    <script src="/index.js"></script>
   </body>
 </html>
